edition = "2023";  // successor to proto2 and proto3

package v2;

import "api/v2/pagination.proto";
import "google/protobuf/go_features.proto";

option go_package = "./api/v2;v2";
option java_package = "io.stackrox.proto.api.v2";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

// RawQuery represents the search query string.
// The format of the query string is "<field name>:<value,value,...>+<field name>:<value, value,...>+..."
// For example:
// To search for deployments named "central" and "sensor" in the namespace "stackrox", the query string would be
// "Deployment:central,sensor+Namespace:stackrox"
// RawQuery is used in ListAPIs to search for a particular object.
message RawQuery {
  string query = 1;
  Pagination pagination = 2;
}
